reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__nested_internally_tagged_enums.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::Test"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::Test"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::Test",
        "representation": {
          "internal": {
            "tag": "version"
          }
        },
        "variants": [
          {
            "name": "v1",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::serde::V1"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "v2",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::serde::V2"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::V1",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "A",
            "fields": {
              "named": [
                {
                  "name": "a",
                  "type": {
                    "name": "u8"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "B",
            "fields": {
              "named": [
                {
                  "name": "b",
                  "type": {
                    "name": "u16"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::V2",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "C",
            "fields": {
              "named": [
                {
                  "name": "c",
                  "type": {
                    "name": "u32"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "D",
            "fields": {
              "named": [
                {
                  "name": "d",
                  "type": {
                    "name": "u64"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u16",
        "description": "16-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u64",
        "description": "64-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::Test",
        "representation": {
          "internal": {
            "tag": "version"
          }
        },
        "variants": [
          {
            "name": "v1",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::serde::V1"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "v2",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::serde::V2"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::V1",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "A",
            "fields": {
              "named": [
                {
                  "name": "a",
                  "type": {
                    "name": "u8"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "B",
            "fields": {
              "named": [
                {
                  "name": "b",
                  "type": {
                    "name": "u16"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::V2",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "C",
            "fields": {
              "named": [
                {
                  "name": "c",
                  "type": {
                    "name": "u32"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "D",
            "fields": {
              "named": [
                {
                  "name": "d",
                  "type": {
                    "name": "u64"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u16",
        "description": "16-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u64",
        "description": "64-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
