reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__newtype_variants_adjacently_tagged.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::TestNewtypeVariantsAdjacentlyTagged"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::TestNewtypeVariantsAdjacentlyTagged"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "bool",
        "description": "Boolean value"
      },
      {
        "kind": "primitive",
        "name": "i32",
        "description": "32-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::TestNewtypeVariantsAdjacentlyTagged",
        "representation": {
          "adjacent": {
            "tag": "t",
            "content": "c"
          }
        },
        "variants": [
          {
            "name": "int",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "i32"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "string",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "bool",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "bool"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "unit",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "bool",
        "description": "Boolean value"
      },
      {
        "kind": "primitive",
        "name": "i32",
        "description": "32-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::TestNewtypeVariantsAdjacentlyTagged",
        "representation": {
          "adjacent": {
            "tag": "t",
            "content": "c"
          }
        },
        "variants": [
          {
            "name": "int",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "i32"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "string",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "bool",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "bool"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "unit",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
}
